add github info

--- a/jumio_assignment.ipynb
+++ b/jumio_assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "We build a classifier on the MNIST dataset. Our classifier is a convolutional neural network with three convolutional layers and one dense layer. With a threshold-based decision strategy, our classifier achieves a maximum false positive rate of __0.00015__ for each class in a test set with at least 1000 images per class. The coverage of our decision strategy is $88\\%$. \n",
     "\n",
     "__Author__: Faerlin Pulido <br>\n",
-    "__GitHub__: "
+    "__GitHub__: https://github.com/faerlinpulido/jumio_take_home_assignment/blob/master/jumio_assignment.ipynb"
    ]
   },
   {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
