fixed equation for decision strategy

--- a/jumio_assignment.ipynb
+++ b/jumio_assignment.ipynb
@@ -973,17 +973,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will define a decision strategy to improve the FPR of our model to a maximum of __0.00015__ for each class in the test set. Given a prediction $y$ from our model, the new prediction $h(y)$ will be\n",
+    "We will define a decision strategy to improve the FPR of our model to a maximum of __0.00015__ for each class in the test set. Given a prediction $y = [y_{0}, y_{1}, \\dots y_{9}]$ from our model, our decision strategy will predict the class $h(y)$ \n",
     "\n",
     "$$\n",
     "h(y) = \n",
     "\\begin{cases} \n",
-    "    \\text{argmax}(y) &, \\text{if}\\ \\max(y) \\ge \\text{threshold} \\\\\n",
+    "    \\arg\\underset{i}\\max(y_{i}) &, \\text{if}\\ \\underset{i}\\max(y_{i}) \\ge \\text{threshold} \\\\\n",
     "    \\text{not_sure} &, \\text{otherwise}\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "for some threshold. For our model and test set, we find that $\\text{threshold} = 0.999975$ accomplishes our goal. Carrying over the predictions (<code>Y_pred</code>) from the previous section, this new decision strategy is implemented below, "
+    "where $y_{i}$ is the predicted probability the input image belongs to class $i$. For our model and test set, we find that $\\text{threshold} = 0.999975$ accomplishes our goal. Carrying over the predictions (<code>Y_pred</code>) from the previous section, this new decision strategy is implemented below, "
    ]
   },
   {
