--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __Jumio Take-Home Assignment__"
+    "# __Minimizing False-Positive Rate on the MNIST Dataset__"
    ]
   },
   {
